changed re rule so that it forces the compiling of *.o

--- a/it_s_the_little_details_that_are_vital_little_things_make_big_things_happen/Makefile
+++ b/it_s_the_little_details_that_are_vital_little_things_make_big_things_happen/Makefile
@@ -11,8 +11,11 @@ all: $(SOURCES) $(EXECUTABLE)
 
 $(EXECUTABLE): $(OBJECTS)
 	ar -rcs $(EXECUTABLE) $(OBJECTS) -o $@
-src/%.o: src/%.c
+
+$(OBJECTS): $(SOURCES)
 	$(CC) $(CFLAGS) $< -o $@
+
 clean:
 	rm -f $(OBJECTS) $(EXECUTABLE)
-re: clean all
+
+re: clean $(OBJECTS)
